@@ -66,10 +66,12 @@ add_subdirectory(PythonInterface)
 
 # copy pythoninterface and icons to build directory
 if (WIN32)
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/ccx.cfg DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/Release/)
  file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/PythonInterface/calculix_pythoninterface.py DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/Release/)
  file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/Icons/ DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/Release/Icons/)
 endif (WIN32)
 if (UNIX)
+ file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/ccx.cfg DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)
  file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/PythonInterface/calculix_pythoninterface.py DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)
  file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/Icons/ DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/Icons/)
 endif (UNIX)
@@ -112,7 +114,7 @@ set(CCXCOMP_SRCS
 if (WIN32)
 add_library(calculix_useroptions SHARED ${CCXUSEROPTIONS_SRCS})
 #set_target_properties(calculix_useroptions PROPERTIES SUFFIX ".dll")
-target_link_libraries(calculix_useroptions clarogui clarofw Qt5::Widgets)
+target_link_libraries(calculix_useroptions clarogui cubiti clarofw Qt5::Widgets)
 set_target_properties(calculix_useroptions PROPERTIES AUTOMOC 1)
 
 add_library(calculix_plugin MODULE ${CCXPLUGIN_SRCS})
@@ -142,7 +144,7 @@ endif (WIN32)
 if (UNIX)
 add_library(calculix_useroptions SHARED ${CCXUSEROPTIONS_SRCS})
 set_target_properties(calculix_useroptions PROPERTIES SUFFIX ".so")
-target_link_libraries(calculix_useroptions clarogui clarofw Qt5::Widgets)
+target_link_libraries(calculix_useroptions clarogui cubiti clarofw Qt5::Widgets)
 set_target_properties(calculix_useroptions PROPERTIES AUTOMOC 1)
 
 add_library(calculix_plugin MODULE ${CCXPLUGIN_SRCS})
