@@ -40,6 +40,7 @@ public:
     std::vector<std::vector<int>> PPTID; //links the process PID, pipe PID and ThreadID 
     std::vector<int> PipePID; //pipe PID
     std::vector<std::thread> PipeThreads; // threads for reading the pipes
+    std::vector<bool> PipeThreadsRun; // bools to keep the threads running
   #else
     std::vector<CubitProcess> CubitProcessHandler;
   #endif
@@ -65,8 +66,10 @@ public:
   int  get_jobs_data_id_from_job_id(int job_id); // searches for the job_id in the jobs_data and returns the indices or -1 if it fails
   #ifdef WIN32
     int  get_ProcessPipe_data_id_from_PipePID(int PipePID); // searches for the Pipe Handle data id in the Processpipe and returns the indices or -1 if it fails
-    int  get_PipePID_from_ProcessPID(int ProcessPID); // searches for the Pipe PID in the ProcessPIDPipePID and returns the PipePID or -1 if it fails
-    void read_pipe(int job_id); // make a reading thread for the jobs pipe
+    int  get_PipePID_from_ProcessPID(int ProcessPID); // searches for the Pipe PID in the PPTID and returns the PipePID or -1 if it fails
+    int  get_ThreadID_from_ProcessPID(int ProcessPID); // searches for the Thread ID in the PPTID and returns the Thread ID or -1 if it fails
+    void read_pipe(int job_id,int bool_data_id); // make a reading thread for the jobs pipe
+    void kill_pipe(int job_id); // kill the reading thread for the jobs pipe
   #else
     int  get_CubitProcessHandler_data_id_from_process_id(int process_id); // searches for the CubitProcessHandler_id in the CubitProcessHandler and returns the indices or -1 if it fails
   #endif
