@@ -1,0 +1,6 @@
+PathSolver=C:\Users\norbert\Desktop\calculix\ccx_dynamic.exe
+SolverThreads=16
+PathCGX=C:\Users\norbert\Desktop\calculix\calculix_2.21_4win\cgx_STATIC.exe
+PathParaView=C:\Program Files\ParaView 5.11.2\bin\paraview.exe
+PathIcons=C:\Users\norbert\Desktop\GitHub\Cubit-CalculiX\build_win\Release\Icons\
+PathPythonInterface=C:\\Users\\norbert\\Desktop\\GitHub\\Cubit-CalculiX\\build_win\\Release\\
